compiler/tests/fixtures/compile_errors/continue_without_loop_2.fe
contract Foo:

    pub def bar():
        if true:
            continue
